# nwf-core

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: conf.py  index.rst  installation.rst  user_guide.rst
docs/api/: modules.rst
examples/: calibration_demo.py  potential_ood.py  quickstart.py  weighted_demo.py
notebooks/: calibration_demo.ipynb  potential_ood.ipynb  quickstart.ipynb  weighted_demo.ipynb
src/nwf/: __init__.py  calibration.py  charge.py  field.py  index.py  index_faiss.py  metric.py  potential.py
src/nwf/encoders/: __init__.py  vae.py
tests/: test_calibration.py  test_charge.py  test_faiss.py  test_field.py  test_index.py  test_metric.py  test_potential.py  test_vae.py
